--- a/pages/home.html
+++ b/pages/home.html
@@ -1,42 +1,87 @@
+<!-- 
+ © 2025 by KittKat. All rights reserved
+ https://kittkat.xyz
+ -->
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <title>kittkat.xyz</title>
-    <meta name="description" content="Home page for kittkat.xyz. Has a cool background image.">
-    <meta name="keywords" content="home, kittkat">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../styles/styles.css?v=202508250154">
-    <title>kittkat.xyz</title>
-</head>
-
-<body>
-    <div class="blur">
-        <main>
-            <h1 class="banner-content" style="text-align: center; color: white;">Good Morning! =^^=</h1>
-            <br>
-            <form action="#" onsubmit="" class="site-search">
-                <input type="text" name="" id="search-input">
-                <button type="submit">Search</button>
-            </form>
-        </main>
-    </div>
+    <script src="../scripts/script.js"></script>
     <style>
         body {
             background-image: url('../images/2023-01-11_cat_sleeping_on_window.jpg');
             height: 100vh;
             background-size: cover;
             background-position: center;
+            padding: 0;
+            margin: 0;
+            backdrop-filter: blur(10px);
+
+            font-size: larger;
         }
 
-        .blur {
-            backdrop-filter: blur(10px);
-            height: 100%;
-            width: 100%;
+        main {
+            padding: 2em;
+            font-family: sans-serif;
+        }
+
+        #h1 {
+            text-align: center;
+            color: white;
+            background-color: #0088aa;
+            border-radius: 0.5em;
+            padding: 0.5em;
+            width: fit-content;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        #search-form {
+            margin: auto;
+            text-align: center;
+            border: 0.3em solid #0088aa;
+            background-color: #0088aa;
+            width: fit-content;
+            border-radius: 0.5em;
+            font-size: 120%;
+        }
+
+        #search-input {
+            background-color: #222;
+            color: white;
+            border: none;
+            border-radius: inherit;
+            font-size: inherit;
+            padding: 0.25em;
+        }
+
+        #search-input:focus {
+            border: #222;
+            outline: none;
+        }
+
+        #search-btn {
+            background-color: transparent;
+            border: none;
+            color: white;
+            font-size: inherit;
+            cursor: pointer;
         }
     </style>
+</head>
+
+<body>
+    <main>
+        <h1 id="h1">Good Morning! =^^=</h1>
+        <form id="search-form">
+            <input type="text" name="" id="search-input">
+            <button type="submit" id="search-btn">Search</button>
+        </form>
+    </main>
 </body>
 
 </html>
