--- a/pages/home.html
+++ b/pages/home.html
@@ -6,7 +6,7 @@
 <html lang="en">
 
 <head>
-    <title>kittkat.xyz</title>
+    <title>NewTab_by_Cat</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
