--- a/pages/popup.html
+++ b/pages/popup.html
@@ -1,1 +1,6 @@
-<h1>=^^=</h1>
+<!-- 
+ © 2025 by KittKat. All rights reserved
+ https://kittkat.xyz
+ -->
+<h1 style="margin: 0;" id="kat">=^^=</h1>
+<script src="../scripts/popup.js"></script>
