--- a/pages/popup.html
+++ b/pages/popup.html
@@ -2,5 +2,16 @@
  © 2025 by KittKat. All rights reserved
  https://kittkat.xyz
  -->
-<h1 style="margin: 0;" id="kat">=^^=</h1>
-<script src="../scripts/popup.js"></script>
+<html>
+
+<head>
+	<link rel="stylesheet" href="../styles/popup.css">
+	<script src="../scripts/settings.js"></script>
+	<script defer src="../scripts/popup.js"></script>
+</head>
+
+<body>
+	<h1 style="margin: 0;" id="kat">=^^=</h1>
+</body>
+
+</html>
