--- a/pages/home.html
+++ b/pages/home.html
@@ -17,7 +17,16 @@
 
 <body>
 	<main>
+		<!-- Greeting message -->
 		<h1 id="h1">Good Morning<span id="user"></span>! <span id="clock">HH:MM</span></h1>
+
+		<!-- Search container -->
+		<div id="search-container">
+			<form action="https://duckduckgo.com/" method="get" autocomplete="off">
+				<input id="ddg-search" type="text" name="q" placeholder="Search with duckduckgo">
+				<input id="ddg-search-btn" type="submit" value="Search" class="btn">
+			</form>
+		</div>
 
 		<!-- Popup modal -->
 		<div id="settings-popup" class="hidden">
