Time based greeting

--- a/pages/home.html
+++ b/pages/home.html
@@ -18,7 +18,7 @@
 <body>
 	<main>
 		<!-- Greeting message -->
-		<h1 id="h1">Good Morning<span id="user"></span>! <span id="clock">HH:MM</span></h1>
+		<h1 id="h1"><span id="greeting">Good Morning</span><span id="user"></span>! <span id="clock">HH:MM</span></h1>
 
 		<!-- Search container -->
 		<div id="search-container">
