Added 24hour switch

--- a/pages/home.html
+++ b/pages/home.html
@@ -40,16 +40,20 @@
 					<button id="close-btn" type="button"><img src="../images/close-icon.svg" alt="X"></button>
 				</div>
 				<div>
-					<label id="name-inp-lbl" for="name">Name</label>
+					<label id="name-inp-lbl" for="name-inp">Name</label>
 					<input type="text" name="name" id="name-inp" placeholder="Name" autocomplete="off">
 				</div>
 				<div>
-					<label id="greeting-inp-lbl" for="name">Greeting</label>
+					<label id="greeting-inp-lbl" for="greeting-inp">Greeting</label>
 					<input type="text" name="greeting" id="greeting-inp" placeholder="Greeting" autocomplete="off">
 					<button id="greeting-inp-reset" type="button" class="btn">Reset</button>
 				</div>
 				<div>
-					<label id="popup-egg-inp-lbl" for="popup-egg" class="hidden">Popup Easter Egg</label>
+					<label id="use24Hour-inp-lbl" for="use24Hour-inp">Use 24 hour time</label>
+					<input type="checkbox" name="use24Hour" id="use24Hour-inp">
+				</div>
+				<div>
+					<label id="popup-egg-inp-lbl" for="popup-egg-inp" class="hidden">Popup Easter Egg</label>
 					<input type="checkbox" name="popup-egg" id="popup-egg-inp" class="hidden">
 					<sub id="popup-egg-inp-note">Did you find the easter egg?</sub>
 				</div>
